fixed horizontal scroll

--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ input[type="radio"]:checked::before {
 /* component */
 
 .card-container {
-    width: 415px;
+    max-width: 415px;
     height: 415px;
     border-radius: 2rem;
     box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.1);
